update loading message, add permanent scroll bar to fix shifting-to-right issue

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ body {
   height: 100%;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 .articles-container {
   display: flex;
   flex-wrap: wrap;
